--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-sdf3-modified/build/*
-sdf3-printf/build/*
+sdf3-modified/build/release
+sdf3-modified/build/work
+sdf3-printf/build/release
+sdf3-printf/build/work
